--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   firebase_auth: 0.16.0
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.6
+  firebase_database: ^3.1.6
 
 
 dev_dependencies:
