--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.6
   firebase_database: ^3.1.6
+  firebase_storage: 3.1.6
+  image_picker: 0.6.7
 
 
 dev_dependencies:
@@ -26,8 +28,8 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
 
   # fonts:
   #   - family: Schyler
